add sqlite for worklog

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,3 +6,8 @@ target_link_libraries(${This}
                      sqlite3
                      spdlog   
 )
+add_custom_command(
+        TARGET ${This} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy
+                ${CMAKE_SOURCE_DIR}/db/worktimer.db
+                ${CMAKE_CURRENT_BINARY_DIR}/db/worktimer.db)
