--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -10,7 +10,7 @@ set(BUILD_GTEST ON CACHE BOOL "" FORCE)
 
 FetchContent_MakeAvailable(googletest)
 
-FetchContent_Declare(sqlite3 URL "https://sqlite.org/2020/sqlite-amalgamation-3320300.zip")
+FetchContent_Declare(sqlite3 URL "https://www.sqlite.org/2021/sqlite-amalgamation-3360000.zip")
 if (NOT sqlite3_POPULATED)
   # notice that we do not call `add_subdirectory`, we simply fetch and then
   # use the subdirectory sources directly.
@@ -20,7 +20,7 @@ endif()
 #===== Fetch spdlog as archive ====================#
 FetchContent_Declare(
     spdlog
-    URL       "https://github.com/gabime/spdlog/archive/v1.3.1.zip"
+    URL       "https://github.com/gabime/spdlog/archive/refs/tags/v1.9.2.zip"
 )
 FetchContent_GetProperties(spdlog)
 if(NOT spdlog_POPULATED)
