--- a/lib/SQLite/CMakeLists.txt
+++ b/lib/SQLite/CMakeLists.txt
@@ -1,11 +1,7 @@
 set(This sqlite3)
 
+set(CMAKE_CXX_LI "-ldl")
+
 file(GLOB_RECURSE TARGET_SRC "./*.cpp" "./*.c" "./*.hpp" "./*.h")
 
 add_library(${This} STATIC ${TARGET_SRC})
-
-set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
-set(THREADS_PREFER_PTHREAD_FLAG TRUE)
-find_package(Threads REQUIRED)
-
-target_link_libraries(${This} Threads::Threads)
