--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,10 @@
 file(GLOB_RECURSE TARGET_SRC "./*.cpp" "./*.hpp" "./*.h")
 
+if(MSVC)
+add_executable(${This} WIN32 ${TARGET_SRC})
+else()
 add_executable(${This} ${TARGET_SRC})
+endif()
 
 target_link_libraries(${This}
                      sqlite3
