--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,20 @@
-file(GLOB_RECURSE TARGET_SRC "./*.cpp" "./*.hpp" "./*.h")
+file(GLOB_RECURSE TARGET_SRC "*.cpp" "*.hpp" "*.h")
+
+foreach(FILE ${TARGET_SRC}) 
+    # Get the directory of the source file
+    get_filename_component(PARENT_DIR "${FILE}" DIRECTORY)
+
+    # Remove common directory prefix to make the group
+    string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" GROUP "${PARENT_DIR}")
+
+    # Make sure we are using windows slashes
+    string(REPLACE "/" "\\" GROUP "${GROUP}")
+
+    # Group into "Source Files" and "Header Files"
+    set(GROUP "${GROUP}")
+
+    source_group("${GROUP}" FILES "${FILE}")
+endforeach()
 
 if(MSVC)
 add_executable(${This} WIN32 ${TARGET_SRC})
